# koe

./: Cargo.toml  Makefile
KoeApp/Koe/: Info.plist
KoeApp/Koe/AppDelegate/: SPAppDelegate.m
KoeApp/Koe/Hotkey/: SPHotkeyMonitor.h  SPHotkeyMonitor.m
KoeApp/Koe/SetupWizard/: SPSetupWizardWindowController.m
koe-asr/: Cargo.toml
koe-cli/: Cargo.toml
koe-core/: Cargo.toml
koe-core/src/: config.rs  lib.rs
