[package]
name = "koe-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "koe"
path = "src/main.rs"

[dependencies]
koe-core = { path = "../koe-core", default-features = false }
clap = { workspace = true, features = ["derive"] }
indicatif.workspace = true
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls", "system-proxy"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
