[package]
name = "koe-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "koe_core"
crate-type = ["staticlib", "lib"]

[features]
default = ["mlx", "sherpa-onnx"]
mlx = ["koe-asr/mlx"]
sherpa-onnx = ["koe-asr/sherpa-onnx"]

[dependencies]
koe-asr = { path = "../koe-asr" }
env_logger.workspace = true
futures-util.workspace = true
log.workspace = true
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls", "http2", "stream", "system-proxy"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-util = { workspace = true, features = ["rt"] }
urlencoding.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
async-trait.workspace = true

[build-dependencies]
cbindgen.workspace = true
